# viacep-address-lookup-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
go/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  go.mod  viacep-address-lookup.go
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
lua/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.lua  features.lua  viacep-address-lookup.rockspec  viacep-address-lookup_sdk.lua  viacep-address-lookup_types.lua
php/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  composer.json  config.php  features.php  (+1 more)
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.py  features.py  pyproject.toml  viacepaddresslookup_sdk.py  viacepaddresslookup_types.py
py/core/: control.py  helpers.py  result.py  spec.py  utility_type.py
py/entity/: cep_lookup_entity.py
py/feature/: cache_feature.py  debug_feature.py  idempotency_feature.py  retry_feature.py  test_feature.py
py/test/: feature_harness.py  runner.py  test_cep_lookup_direct.py  test_cep_lookup_entity.py  test_exists.py  test_feature.py  test_netsim.py  test_pipeline.py  test_primary_utility.py  test_readme_examples.py
py/utility/: feature_add.py  feature_hook.py  feature_init.py  make_error.py  make_fetch_def.py  make_options.py  make_point.py  make_request.py  make_response.py  make_result.py  prepare_auth.py  prepare_body.py  prepare_method.py  prepare_params.py  result_body.py  result_headers.py
(+420 files in other folders)
